<resources>
    <string name="app_name">My Application</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="edit_item">Edit Item</string>
    <string name="enter_the_updated_item">Enter the updated item</string>
    <string name="enter_the_key">Enter the key</string>
    <string name="enter_the_value">Enter the value</string>
    <string name="podaj_haslo">Podaj hasło</string>
    <string name="register">Register</string>
    <string name="podaj_adres_email">Podaj adres email</string>
    <string name="przepisy">Przepisy</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="homeItem">homeItem</string>
    <string name="przepisyItem">przepisyItem</string>
    <string name="powt_rz_has_o">Powtórz hasło</string>
    <string name="poka_has_o">Pokaż hasło</string>
    <string name="zarejestruj">Zarejestruj</string>
    <string name="zarejestruj1">Zarejestruj</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="zaloguj1">Zaloguj</string>
    <string name="podaj_has_o">Podaj hasło</string>
    <string name="podaj_adres_email1">Podaj adres email</string>
</resources>