<!-- dialog_edit_item.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_item"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/keyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Produkt"
        android:hint="@string/enter_the_key"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/valueEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Ilość"
        android:hint="@string/enter_the_value"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

</LinearLayout>
