<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/register_emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="170dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/podaj_adres_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/podaj_haslo"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_emailEditText" />

    <EditText
        android:id="@+id/register_repeatPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/powt_rz_has_o"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_passwordEditText" />

    <Switch
        android:id="@+id/showPasswordSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:minHeight="48dp"
        android:text="@string/poka_has_o"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_repeatPasswordEditText"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/zarejestruj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showPasswordSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>
