<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="232dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/podaj_adres_email1"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/podaj_has_o"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_emailEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/zaloguj1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_passwordEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>